:last-update-label!:

= History

== 10.2.0 (undetermined)
* Added packet_id limit functionality for testing. #418
* Recovered missing compile-time Role-Packet checking functionality. #417
* Added broker's Client Certificate subjectAltName. #416
* Fixed invalid remaining length parsing problem on disconnect and auth packet. #415
* Supported Boost.1.88.0 defaulted process v2. #414
* Fixed PacketIdBytes treatment in MQTT v5 publish response packets. #412
* Refined documents. #410
* Refined CI. #409
* Fixed warnings on release build. #409
* Adjusted and unified broker's `read_buf_size` option's default value. #408
* Updated docker build. #408

== 10.1.0
* Added C++20 coroutine version of broker (experimental). #406
* Fixed connection status updating timing. #402
* Refined CI. #401
* Refined log level. #399, #402
* Refined documentr. Added coding rule to navigation bar.  #396
* Refined broker. #395, #398, #405
* Changed the broker auth JSON file comment syntax. #394
** Now supports C/C++-style line and block comments.
** The `#` line comment syntax is no longer supported.
** For migrating, simply replace `#` with `//`.
** *This is a breaking change for the tool (not the library), so the major version remains unchanged.*
* Fixed broker websocket connection. #393, #397
** It doesn't affect the library part.
* Refined documents. #389, #390

== 10.0.0
=== breaking changes #388
* Re-organized include files.
** See https://redboltz.github.io/async_mqtt/doc/10.0.0/async_mqtt/header.html
* Removed non bulk read to meet Sans-I/O interface.
* Supported I/O independent (aka Sans-I/O) library.
* underlying_handshake functionality is updated from free function to member function.
** Simply replace `async_underlying_handshake(your_ep.next_layer(), ...)` with `your_ep.async_underlying_handshake(...)`.

=== other updates
* Added invalid combination checking of sharename and nl(no local). #372
* Fixed receive maximum processing. #371